examples/01-clean-code-arch-simple/src/domain/customer/errors/invalid-customer-email-error.ts
export class InvalidCustomerEmailError extends Error {
  constructor(message: string) {
    super(message);
    this.name = "InvalidCustomerEmailError";
  }
}
